--- a/Nativo/frontend/angular.json
+++ b/Nativo/frontend/angular.json
@@ -31,7 +31,9 @@
               "src/styles.css",
               "node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css",
               "node_modules/admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css",
+              "node_modules/admin-lte/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css",
               "node_modules/admin-lte/dist/css/adminlte.min.css"
+              
             ],
             "scripts": [
               "node_modules/admin-lte/plugins/jquery/jquery.min.js",
