--- a/Nativo/frontend/angular.json
+++ b/Nativo/frontend/angular.json
@@ -33,7 +33,11 @@
               "node_modules/admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css",
               "node_modules/admin-lte/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css",
               "node_modules/admin-lte/dist/css/adminlte.min.css",
-              "node_modules/admin-lte/plugins/summernote/summernote-bs4.css"
+              "node_modules/admin-lte/plugins/summernote/summernote-bs4.css",
+              "node_modules/admin-lte/plugins/fullcalendar-daygrid/main.min.css",
+              "node_modules/admin-lte/plugins/fullcalendar-timegrid/main.min.css",
+              "node_modules/admin-lte/plugins/fullcalendar/main.min.css",
+              "node_modules/admin-lte/plugins/fullcalendar-bootstrap/main.min.css"
               
             ],
             "scripts": [
@@ -41,7 +45,12 @@
               "node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js",
               "node_modules/admin-lte/dist/js/adminlte.min.js",
               "node_modules/admin-lte/plugins/summernote/summernote-bs4.min.js",
-              "node_modules/admin-lte/dist/js/demo.js"
+              "node_modules/admin-lte/dist/js/demo.js",
+              "node_modules/admin-lte/plugins/fullcalendar/main.min.js",
+              "node_modules/admin-lte/plugins/fullcalendar-daygrid/main.min.js",
+              "node_modules/admin-lte/plugins/fullcalendar-timegrid/main.min.js",
+              "node_modules/admin-lte/plugins/fullcalendar-interaction/main.min.js",
+              "node_modules/admin-lte/plugins/fullcalendar-bootstrap/main.min.js"
             ]
           },
           "configurations": {
